--------------------------------------------------------------------------------
Fusion 1.210 - February 28th, 2004
--------------------------------------------------------------------------------

- 03-06-04: Added Clown/Gypsy Vulcan Arrow [Oatmeal]
- 03-06-04: Added Assasin Cross Breaker skill [Oatmeal]
- 03-06-04: Added Falcon Assault [Oatmeal]
- 03-06-04: Added Paladin Skill Sacrafice [Oatmeal]
- 03-06-04: Added Paladin Skill Presure [Oatmeal]
- 03-06-04: Added Professor Skill HP Conversion (Values on skills arent 100% accurate). [Darkhelmet]
- 03-06-04: Added Professor Skill Soul Change. [Darkhelmet]
- 03-06-04: Added Professor Skill Soul Burn. [Darkhelmet]
- 03-06-04: FusionSQL -> Optimized Guild Loading Algorithm. [AlexKreuz]
- 03-06-04: FusionSQL -> Created Preload_GuildMembers. [AlexKreuz]
- 03-05-04: FusionSQL -> Created Load_Guilds. [AlexKreuz]
- 03-05-04: FusionSQL -> Optimized Pets Loading Algorithm. [AlexKreuz]
- 03-05-04: FusionSQL -> Created Load_Pets. [AlexKreuz]
- 03-05-04: FusionSQL -> Optimized Party Loading Algorithm. [AlexKreuz]
- 03-05-04: FusionSQL -> Created Load_Parties. [AlexKreuz]
- 03-05-04: Updated number of skills. [Colus]
- 03-05-04: Added Graphic support for LK_Fury, LK_Berserk, LK_Aurablad -[Oatmeal]
- 03-05-04: Updated equipment handling for upper jobs. [Colus]
- 03-05-04: More upper class support (job numbers, charaselect, data save) [Colus]
- 03-05-04: Added upper job support (experimental) [Colus]
- 03-03-04: FusionSQL -> Created Load_Characters Function. [AlexKreuz]
- 03-03-04: FusionSQL -> Created Assign_AccountID Function. [AlexKreuz]
- 03-03-04: Optimized Login Code. Faster Logins needed for SQL Timeout. [AlexKreuz]
- 03-03-04: FusionSQL -> Created Call_Characters Function. [AlexKreuz]
- 03-03-04: FusionSQL -> Created Load_Accounts Function. [AlexKreuz]
- 03-01-04: Added Sage Skill Dispel. [Darkhelmet]
- 02-29-04: Removed Perfect Hide, Monsters aggressive again, Code Error on my part. [Darkhelmet]