@@ -2,6 +2,8 @@
 Fusion 1.210 - February 28th, 2004
 --------------------------------------------------------------------------------
 
+- 03-06-04: Added Tiger Claw [Oatmeal]
+- 03-06-04: Added Chain Crush [Oatmeal] 
 - 03-06-04: Added Clown/Gypsy Vulcan Arrow [Oatmeal]
 - 03-06-04: Added Assasin Cross Breaker skill [Oatmeal]
 - 03-06-04: Added Falcon Assault [Oatmeal]
